# airflow-sops-secrets-backend

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  test.py
airflow_secrets_backend/: __init__.py
gcs_sops_secrets_backend/: __init__.py  cyberark_backend.py  gcp_secrets_manager.py  local_filesystem.py  secret_manager.py
src/airflow/sops/: __init__.py  gcs.py  secrets_backend.py  yaml.py
src/airflow_sops/: helpers.py  secrets_backend.py
tests/: test_integration.py
