[metadata]
name = airflow-gcs-sops-secrets-backend
version = attr:gcs_sops_secrets_backend.__version__
description =  An Airflow custom secrets backend for sops encrypted resources in gcs bucket
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pvitic/airflow-gcs-sops-secrets-backend
author = Paul Vitic
license = MIT

[options]
packages = airflow_cyberark_secrets_backend
install_requires =
  apache-airflow >= 1.10.10,<3
python_requires = >=3.6
